--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@ Odah Victor Ebube 👋
     </div>
     <div class="sidetwo">
 
-<img src="https://ca.slack-edge.com/T07466B189M-U07A7DMJSN8-8c591ac28da6-512" alt="" data-testid="slackProfilePicture"
+<img src="T07466B189M-U07A7DMJSN8-8c591ac28da6-512.png" alt="" data-testid="slackProfilePicture"
 >
     </div>
 </div>
